[package]
name = "overlay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.26.2"
egui_overlay = "0.7.0"
egui_render_three_d = "0.7.0"
egui_window_glfw_passthrough = "0.7.0"
log = "0.4.21"
pixels = "0.13.0"
simple_logger = "4.3.3"
tracing-subscriber = "0.3.18"
winit = { version = "0.29.15", features = ["rwh_05"]}
