[package]
name = "overlay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursor-icon = "1.1.0"
egui = "0.27.2"
egui-wgpu = "0.27.2"
egui-winit = "0.27.2"
image = "0.25.1"
log = "0.4.21"
pixels = "0.13.0"
raw-window-handle = "0.6.1"
scrap = "0.5.0"
simple_logger = "4.3.3"
softbuffer = "0.4.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wgpu = "0.19.4"
winit = { version = "0.30"}
